# todo-microservice

./: .env.example  Cargo.toml  README.md
migrations/: 20240117050430_Used_when_setting_up_the_database_for_the_first_time.sql
src/: controllers.rs  main.rs  models.rs  test.rs
src/controllers/: api_controller.rs  db_controller.rs
src/models/: app_data.rs  db_controller.rs  json_add_request.rs  json_update_request.rs  todo.rs
src/sql/: UP.sql
