[package]
name = "todo-microservice"
version = "0.1.0"
edition = "2021"
description = "A basic todo CRUD microservice written in Rust."
authors = ["Riktam Santra"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
sqlx = {version =  "0.7.3", features = ["runtime-tokio", "postgres", "uuid", "time"] }
uuid = {version = "1.6.1", features = ["serde"]}
logger = "0.4.0"
env_logger = "0.10.1"
log = "0.4.20"
serde = "1.0.195"
serde_json = "1.0.111"
serde_derive = "1.0.195"
time = {version = "0.3.31", features = ["serde"]}
dotenv = "0.15.0"
